inquirySheetInputs class added to all the inputs

--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -532,7 +532,7 @@
             <tr>
                 <td class="fw-bold w-25">Course</td>
                 <td class="w-25">
-                    <select class="form-select rounded-0 small form-select-sm" disabled
+                    <select class="form-select rounded-0 small form-select-sm inquirySheetInputs" disabled
                             id="inquirySheetCourse"
                             onchange="selectDynamicValueValidator(this,'','editedInquiry','courseId')" required>
                         <option value=""></option>
@@ -544,7 +544,7 @@
                 </td>
                 <td class="fw-bold w-25">Source</td>
                 <td>
-                    <select class="form-select rounded-0 small form-select-sm" disabled
+                    <select class="form-select rounded-0 small form-select-sm inquirySheetInputs" disabled
                             id="inquirySheetSource"
                             onchange="selectDynamicValueValidator(this,'','editedInquiry','sourceId')" required>
                         <option value=""></option>
@@ -563,26 +563,26 @@
             </tr>
             <tr>
                 <td class="fw-bold w-25">First Name</td>
-                <td class="w-25"><input class="small rounded-0 form-control-sm border-0 inquirySheetInputs" id="inquirySheetFirstName"
+                <td class="w-25"><input class="small rounded-0 form-control-sm inquirySheetInputs" id="inquirySheetFirstName"
                                         onkeyup="inputTextValidator(this,'^[A-Z][a-z]{2,19}$','editedInquiry','firstName')"
                                         disabled
                                         value="Kasun">
                 </td>
                 <td class="fw-bold w-25">Last Name</td>
-                <td><input class="small rounded-0 form-control-sm border-0 inquirySheetInputs" id="inquirySheetLastName"
+                <td><input class="small rounded-0 form-control-sm inquirySheetInputs" id="inquirySheetLastName"
                            onkeyup="inputTextValidator(this,'^[A-Z][a-z]{2,29}$','editedInquiry','lastName')"
                            disabled
                            value="Malhara"></td>
             </tr>
             <tr>
                 <td class="fw-bold w-25">Phone Number</td>
-                <td class="w-25"><input class="small rounded-0 form-control-sm border-0 inquirySheetInputs" id="inquirySheetPrimaryMobile"
+                <td class="w-25"><input class="small rounded-0 form-control-sm inquirySheetInputs" id="inquirySheetPrimaryMobile"
                                         onkeyup="inputTextValidator(this,'^[0][7][01245678][0-9]{7}$','editedInquiry','primaryMobileNumber')"
                                         disabled
                                         value="0781011144">
                 </td>
                 <td class="fw-bold w-25">Email</td>
-                <td><input class="small rounded-0 form-control-sm border-0 inquirySheetInputs" id="inquirySheetEmail"
+                <td><input class="small rounded-0 form-control-sm inquirySheetInputs" id="inquirySheetEmail"
                            onkeyup="inputTextValidator(this,'^[a-z|A-Z]{2,19}[@][a-z|A-Z]{2,8}[.][a-z|A-Z]{2,3}$','editedInquiry','email')"
                            placeholder="Optional" disabled
                            value="eamalindu@gmail.com">
@@ -590,7 +590,7 @@
             </tr>
             <tr>
                 <td class="fw-bold w-25">Optional Number</td>
-                <td class="w-25"><input class="small rounded-0 form-control-sm border-0 inquirySheetInputs"
+                <td class="w-25"><input class="small rounded-0 form-control-sm inquirySheetInputs"
                                         id="inquirySheetSecondaryMobile"
                                         onkeyup="inputTextValidator(this,'^[0][7][01245678][0-9]{7}$','editedInquiry','secondaryMobileNumber')"
                                         placeholder="Optional" disabled
@@ -604,7 +604,7 @@
                         <option value="POSTAL">POSTAL</option>
                     </select>
                 </td>
-                <td><input class="small rounded-0 form-control-sm border-0 inquirySheetInputs" id="inquirySheetIdValue"
+                <td><input class="small rounded-0 form-control-sm inquirySheetInputs" id="inquirySheetIdValue"
                            onkeyup="inputTextValidator(this,'^(?:[6-9][0-9]{8}([V]|[X]|[v]|[x]){1})|(?:[19|20][0-9]{10})$','editedInquiry','idValue')"
                            disabled
                            value="983151108V">
@@ -615,7 +615,7 @@
                 <td class="w-25"><input class="small rounded-0 form-control-sm border-0" id="inquirySheetNextFollowUp"
                                         disabled value="2023-10-26 at 00:00"></td>
                 <td class="fw-bold w-25">Description</td>
-                <td><textarea class="small rounded-0 form-control-sm border-0 inquirySheetInputs" id="inquirySheetDescription"
+                <td><textarea class="small rounded-0 form-control-sm inquirySheetInputs" id="inquirySheetDescription"
                               onkeyup="inputTextValidator(this,'^[a-zA-Z0-9\\s/]{20,}$','editedInquiry','description')"
                               disabled></textarea>
                 </td>
