--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -241,7 +241,7 @@
 <div aria-labelledby="offcanvasRightLabel" class="offcanvas offcanvas-end" data-bs-backdrop="static"
      id="offCanvasInquiry" tabindex="-1">
     <div class="offcanvas-header bg-light">
-        <button aria-label="Close" class="btn btn-sm btn-danger btn-close-red rounded-0" data-bs-dismiss="offcanvas"
+        <button aria-label="Close" id="offCanvasInquiryCloseButton" class="btn btn-sm btn-danger btn-close-red rounded-0" data-bs-dismiss="offcanvas"
                 type="button"><i class="fas fa-times"></i></button>
         <h3 class="float-end"
             style="text-transform: uppercase;font-size: medium;font-weight: bold;font-family: Arial, serif;">New
