--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -295,7 +295,7 @@
                         <div class="form-label small">
                             <label class="fw-bold required" for="inquiryFirstName">First Name</label>
                         </div>
-                        <input class="form-control rounded-0" id="inquiryFirstName"
+                        <input class="form-control rounded-0 newInquiryInputs" id="inquiryFirstName"
                                onkeyup="inputTextValidator(this,'^[A-Z][a-z]{2,19}$','newInquiry','firstName')" required
                                type="text">
                     </div>
@@ -303,7 +303,7 @@
                         <div class="form-label small">
                             <label class="fw-bold required" for="inquiryLastName">Last Name</label>
                         </div>
-                        <input class="form-control rounded-0" id="inquiryLastName"
+                        <input class="form-control rounded-0 newInquiryInputs" id="inquiryLastName"
                                onkeyup="inputTextValidator(this,'^[A-Z][a-z]{2,29}$','newInquiry','lastName')" required
                                type="text">
                     </div>
@@ -311,7 +311,7 @@
                         <div class="form-label small">
                             <label class="fw-bold required" for="inquiryMobileNumber">Mobile Number</label>
                         </div>
-                        <input class="form-control rounded-0" id="inquiryMobileNumber"
+                        <input class="form-control rounded-0 newInquiryInputs" id="inquiryMobileNumber"
                                onkeyup="inputTextValidator(this,'^[0][7][01245678][0-9]{7}$','newInquiry','primaryMobileNumber')"
                                required type="text">
                     </div>
@@ -319,7 +319,7 @@
                         <div class="form-label small">
                             <label class="fw-bold" for="inquiryAdditionalMobileNumber">Additional Mobile Number</label>
                         </div>
-                        <input class="form-control rounded-0" id="inquiryAdditionalMobileNumber"
+                        <input class="form-control rounded-0 newInquiryInputs" id="inquiryAdditionalMobileNumber"
                                onkeyup="inputTextValidator(this,'^[0][7][01245678][0-9]{7}$','newInquiry','secondaryMobileNumber')"
                                placeholder="Optional" type="text">
                     </div>
@@ -327,7 +327,7 @@
                         <div class="form-label small">
                             <label class="fw-bold" for="inquiryEmail">Email</label>
                         </div>
-                        <input class="form-control rounded-0" id="inquiryEmail"
+                        <input class="form-control rounded-0 newInquiryInputs" id="inquiryEmail"
                                onkeyup="inputTextValidator(this,'^[a-z|A-Z]{2,19}[@][a-z|A-Z]{2,8}[.][a-z|A-Z]{2,3}$','newInquiry','email')"
                                placeholder="Optional"
                                type="text">
@@ -345,7 +345,7 @@
                                 <option value="NIC">NIC</option>
                                 <option value="POSTAL">Postal</option>
                             </select>
-                            <input class="form-control rounded-0" id="inquiryID"
+                            <input class="form-control rounded-0 newInquiryInputs" id="inquiryID"
                                    onkeyup="inputTextValidator(this,'^(?:[6-9][0-9]{8}([V]|[X]|[v]|[x]){1})|(?:[19|20][0-9]{10})$','newInquiry','idValue')"
                                    required>
                         </div>
@@ -354,7 +354,7 @@
                         <div class="form-label">
                             <label class="fw-bold required small" for="inquiryTime">Convenient Time To Contact</label>
                         </div>
-                        <input class="form-control rounded-0" id="inquiryTime"
+                        <input class="form-control rounded-0 newInquiryInputs" id="inquiryTime"
                                onchange="inputDateTimeValidator(this,'^20[0-9]{2}[-][0-9]{2}[-][0-9]{2}[ ][0-9]{2}[:][0-9]{2}$','newInquiry','contactTime')"
                                required>
                     </div>
@@ -362,7 +362,7 @@
                         <div class="form-label">
                             <label class="fw-bold required small" for="inquiryDescription">Description</label>
                         </div>
-                        <textarea class="rounded-0 form-control" cols="80" id="inquiryDescription"
+                        <textarea class="rounded-0 form-control newInquiryInputs" cols="80" id="inquiryDescription"
                                   onkeyup="inputTextValidator(this,'^[a-zA-Z0-9\\s/]{20,}$','newInquiry','description')"
                                   required
                                   rows="4"></textarea>
