--- a/system/src/main/resources/templates/crm/Inquiries.html
+++ b/system/src/main/resources/templates/crm/Inquiries.html
@@ -203,22 +203,29 @@
 </div>
 
 
-<!-- OffCanvas for New Inquiry Start -->
-<div aria-labelledby="offcanvasRightLabel" class="offcanvas offcanvas-end" data-bs-backdrop="static" id="offCanvasInquiry" tabindex="-1">
+<!-- OffCanvas for New Inquiry Start (updated) -->
+<div aria-labelledby="offcanvasRightLabel" class="offcanvas offcanvas-end" data-bs-backdrop="static"
+     id="offCanvasInquiry" tabindex="-1">
     <div class="offcanvas-header bg-light">
-        <button aria-label="Close" class="btn btn-sm btn-danger btn-close-red rounded-0" data-bs-dismiss="offcanvas" type="button"><i class="fas fa-times"></i></button>
-        <h3 class="float-end" style="text-transform: uppercase;font-size: medium;font-weight: bold;font-family: Arial, serif;">New Inquiry</h3>
+        <button aria-label="Close" id="offCanvasInquiryCloseButton" class="btn btn-sm btn-danger btn-close-red rounded-0" data-bs-dismiss="offcanvas"
+                type="button"><i class="fas fa-times"></i></button>
+        <h3 class="float-end"
+            style="text-transform: uppercase;font-size: medium;font-weight: bold;font-family: Arial, serif;">New
+            Inquiry</h3>
     </div>
     <div class="offcanvas-body">
         <div class="card border-0">
             <div class="card-body border-0">
-                <form onsubmit="return false" id="frmNewInquiry">
+                <form id="frmNewInquiry" onsubmit="return false">
                     <div class="mb-2">
                         <div class="form-label">
                             <label class="fw-bold required small" for="inquirySource">Source</label>
                         </div>
                         <div class="input-group">
-                            <select class="form-select rounded-0 chosen-inquiry" data-placeholder="Please Select a Source" id="inquirySource" required onchange="selectDynamicValueValidator(this,'','newInquiry','sourceId')">
+                            <select class="form-select rounded-0 chosen-inquiry"
+                                    data-placeholder="Please Select a Source" id="inquirySource"
+                                    onchange="selectDynamicValueValidator(this,'','newInquiry','sourceId')"
+                                    required>
                                 <option value=""></option>
                                 <option value="Cold Calling">Cold Calling</option>
                                 <option value="Facebook">Facebook</option>
@@ -238,7 +245,10 @@
                             <label class="fw-bold required small" for="inquiryCourse">Course</label>
                         </div>
                         <div class="input-group">
-                            <select class="form-select rounded-0 chosen-inquiry" data-placeholder="Please Select a Course" id="inquiryCourse" required onchange="selectDynamicValueValidator(this,'','newInquiry','courseId')">
+                            <select class="form-select rounded-0 chosen-inquiry"
+                                    data-placeholder="Please Select a Course" id="inquiryCourse"
+                                    onchange="selectDynamicValueValidator(this,'','newInquiry','courseId')"
+                                    required>
                                 <option value=""></option>
                                 <option>Diploma in IT</option>
                                 <option>Diploma in English</option>
@@ -251,31 +261,41 @@
                         <div class="form-label small">
                             <label class="fw-bold required" for="inquiryFirstName">First Name</label>
                         </div>
-                        <input class="form-control rounded-0" id="inquiryFirstName" onkeyup="inputTextValidator(this,'^[A-Z][a-z]{2,19}$','newInquiry','firstName')" required type="text">
+                        <input class="form-control rounded-0 newInquiryInputs" id="inquiryFirstName"
+                               onkeyup="inputTextValidator(this,'^[A-Z][a-z]{2,19}$','newInquiry','firstName')" required
+                               type="text">
                     </div>
                     <div class="mb-2">
                         <div class="form-label small">
                             <label class="fw-bold required" for="inquiryLastName">Last Name</label>
                         </div>
-                        <input class="form-control rounded-0" id="inquiryLastName" onkeyup="inputTextValidator(this,'^[A-Z][a-z]{2,29}$','newInquiry','lastName')" required type="text">
+                        <input class="form-control rounded-0 newInquiryInputs" id="inquiryLastName"
+                               onkeyup="inputTextValidator(this,'^[A-Z][a-z]{2,29}$','newInquiry','lastName')" required
+                               type="text">
                     </div>
                     <div class="mb-2">
                         <div class="form-label small">
                             <label class="fw-bold required" for="inquiryMobileNumber">Mobile Number</label>
                         </div>
-                        <input class="form-control rounded-0" id="inquiryMobileNumber" onkeyup="inputTextValidator(this,'^[0][7][01245678][0-9]{7}$','newInquiry','primaryMobileNumber')" required type="text">
+                        <input class="form-control rounded-0 newInquiryInputs" id="inquiryMobileNumber"
+                               onkeyup="inputTextValidator(this,'^[0][7][01245678][0-9]{7}$','newInquiry','primaryMobileNumber')"
+                               required type="text">
                     </div>
                     <div class="mb-2">
                         <div class="form-label small">
                             <label class="fw-bold" for="inquiryAdditionalMobileNumber">Additional Mobile Number</label>
                         </div>
-                        <input class="form-control rounded-0" id="inquiryAdditionalMobileNumber" onkeyup="inputTextValidator(this,'^[0][7][01245678][0-9]{7}$','newInquiry','secondaryMobileNumber')" placeholder="Optional" type="text">
+                        <input class="form-control rounded-0 newInquiryInputs" id="inquiryAdditionalMobileNumber"
+                               onkeyup="inputTextValidator(this,'^[0][7][01245678][0-9]{7}$','newInquiry','secondaryMobileNumber')"
+                               placeholder="Optional" type="text">
                     </div>
                     <div class="mb-2">
                         <div class="form-label small">
                             <label class="fw-bold" for="inquiryEmail">Email</label>
                         </div>
-                        <input class="form-control rounded-0" id="inquiryEmail" onkeyup="inputTextValidator(this,'^[a-z|A-Z]{2,19}[@][a-z|A-Z]{2,8}[.][a-z|A-Z]{2,3}$','newInquiry','email')" placeholder="Optional"
+                        <input class="form-control rounded-0 newInquiryInputs" id="inquiryEmail"
+                               onkeyup="inputTextValidator(this,'^[a-z|A-Z]{2,19}[@][a-z|A-Z]{2,8}[.][a-z|A-Z]{2,3}$','newInquiry','email')"
+                               placeholder="Optional"
                                type="text">
                     </div>
                     <div class="mb-2">
@@ -283,29 +303,42 @@
                             <label class="fw-semibold required small" for="inquiryIdOption">NIC / Postal ID</label>
                         </div>
                         <div class="input-group">
-                            <select class="form-select rounded-0 chosen-inquiry-ID" id="inquiryIdOption" data-placeholder="Please Select" required onchange="selectStaticValueValidator(this,'','newInquiry','idType')">
+                            <select class="form-select rounded-0 chosen-inquiry-ID" data-placeholder="Please Select"
+                                    id="inquiryIdOption"
+                                    onchange="selectStaticValueValidator(this,'','newInquiry','idType')"
+                                    required>
                                 <option value=""></option>
                                 <option value="NIC">NIC</option>
                                 <option value="POSTAL">Postal</option>
                             </select>
-                            <input class="form-control rounded-0" id="inquiryID" onkeyup="inputTextValidator(this,'^(?:[6-9][0-9]{8}([V]|[X]|[v]|[x]){1})|(?:[19|20][0-9]{10})$','newInquiry','idValue')" required>
+                            <input class="form-control rounded-0 newInquiryInputs" id="inquiryID"
+                                   onkeyup="inputTextValidator(this,'^(?:[6-9][0-9]{8}([V]|[X]|[v]|[x]){1})|(?:[19|20][0-9]{10})$','newInquiry','idValue')"
+                                   required>
                         </div>
                     </div>
                     <div class="mb-2">
                         <div class="form-label">
                             <label class="fw-bold required small" for="inquiryTime">Convenient Time To Contact</label>
                         </div>
-                        <input class="form-control rounded-0" id="inquiryTime" onchange="inputDateTimeValidator(this,'^20[0-9]{2}[-][0-9]{2}[-][0-9]{2}[ ][0-9]{2}[:][0-9]{2}$','newInquiry','contactTime')" required>
+                        <input class="form-control rounded-0 newInquiryInputs" id="inquiryTime"
+                               onchange="inputDateTimeValidator(this,'^20[0-9]{2}[-][0-9]{2}[-][0-9]{2}[ ][0-9]{2}[:][0-9]{2}$','newInquiry','contactTime')"
+                               required>
                     </div>
                     <div class="mb-3">
                         <div class="form-label">
                             <label class="fw-bold required small" for="inquiryDescription">Description</label>
                         </div>
-                        <textarea class="rounded-0 form-control" cols="80" id="inquiryDescription" required rows="4" onkeyup="inputTextValidator(this,'^[a-zA-Z0-9\\s/]{20,}$','newInquiry','description')"></textarea>
-                        <div class="text-muted small"><small> a short description which will be useful for the counsellor who will be handling this inquiry</small></div>
+                        <textarea class="rounded-0 form-control newInquiryInputs" cols="80" id="inquiryDescription"
+                                  onkeyup="inputTextValidator(this,'^[a-zA-Z0-9\\s/]{20,}$','newInquiry','description')"
+                                  required
+                                  rows="4"></textarea>
+                        <div class="text-muted small"><small> a short description which will be useful for the
+                            counsellor who will be handling this inquiry</small></div>
                     </div>
                     <div class="mb-2">
-                        <button class="btn bg-purple text-white rounded-0 btn-block w-100" id="inquiryConfirm" onclick="newInquirySubmit()" type="submit">Confirm</button>
+                        <button class="btn bg-purple text-white rounded-0 btn-block w-100" id="inquiryConfirm"
+                                onclick="newInquirySubmit()" type="submit">Confirm
+                        </button>
                     </div>
                 </form>
             </div>
@@ -313,6 +346,7 @@
     </div>
 </div>
 <!-- OffCanvas for New Inquiry End -->
+
 
 <!-- OffCanvas for Inquiry Sheet Start -->
 <div aria-labelledby="offcanvasRightLabel" class="offcanvas offcanvas-end w-50" data-bs-backdrop="static" id="offcanvasDeafult" tabindex="-1">
