--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -315,7 +315,7 @@
 <div aria-labelledby="offcanvasRightLabel" class="offcanvas offcanvas-end w-50" data-bs-backdrop="static"
      id="offcanvasDeafult" tabindex="-1">
     <div class="offcanvas-header bg-light">
-        <button aria-label="Close" class="btn btn-sm btn-danger btn-close-red rounded-0" data-bs-dismiss="offcanvas"
+        <button aria-label="Close" class="btn btn-sm btn-danger btn-close-red rounded-0" id="offCanvasInquirySheetCloseButton" data-bs-dismiss="offcanvas"
                 type="button"><i class="fas fa-times"></i></button>
         <div class="container d-flex gap-3" style="width: 65%">
             <button aria-controls="collapseFollowUp" aria-expanded="false"
