--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -395,19 +395,19 @@
                                     <label class="fw-bold required small">Feeling</label>
                                 </div>
                                 <div class="form-check form-check-inline">
-                                    <input class="form-check-input" id="inquiryFollowUpFeelingPositive"
+                                    <input class="form-check-input" id="inquiryFollowUpFeelingPositive" onchange="newFollowUp.feeling=this.value;"
                                            name="inquiryFollowUpFeeling" type="radio" value="positive">
                                     <label class="form-check-label small"
                                            for="inquiryFollowUpFeelingPositive">Positive</label>
                                 </div>
                                 <div class="form-check form-check-inline">
-                                    <input checked class="form-check-input" id="inquiryFollowUpFeelingNeutral"
+                                    <input checked class="form-check-input" id="inquiryFollowUpFeelingNeutral" onchange="newFollowUp.feeling=this.value;"
                                            name="inquiryFollowUpFeeling" type="radio" value="neutral">
                                     <label class="form-check-label small"
                                            for="inquiryFollowUpFeelingNeutral">Neutral</label>
                                 </div>
                                 <div class="form-check form-check-inline">
-                                    <input class="form-check-input" id="inquiryFollowUpFeelingNegative"
+                                    <input class="form-check-input" id="inquiryFollowUpFeelingNegative" onchange="newFollowUp.feeling=this.value;"
                                            name="inquiryFollowUpFeeling" type="radio" value="negative">
                                     <label class="form-check-label small"
                                            for="inquiryFollowUpFeelingNegative">Negative</label>
@@ -421,12 +421,12 @@
                                         confirmed to register?</label>
                                 </div>
                                 <div class="form-check form-check-inline">
-                                    <input class="form-check-input" id="inquiryFollowUpConfirmYes"
+                                    <input class="form-check-input" id="inquiryFollowUpConfirmYes" onchange="newFollowUp.confirmed=this.value;"
                                            name="inquiryFollowUpConfirm" type="radio" value="Yes">
                                     <label class="form-check-label" for="inquiryFollowUpConfirmYes">Yes</label>
                                 </div>
                                 <div class="form-check form-check-inline">
-                                    <input checked class="form-check-input" id="inquiryFollowUpConfirmNo"
+                                    <input checked class="form-check-input" id="inquiryFollowUpConfirmNo" onchange="newFollowUp.confirmed=this.value;"
                                            name="inquiryFollowUpConfirm" type="radio" value="No">
                                     <label class="form-check-label" for="inquiryFollowUpConfirmNo">No</label>
                                 </div>
