--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -401,7 +401,7 @@
                                            for="inquiryFollowUpFeelingPositive">Positive</label>
                                 </div>
                                 <div class="form-check form-check-inline">
-                                    <input checked class="form-check-input" id="inquiryFollowUpFeelingNeutral" onchange="newFollowUp.feeling=this.value;"
+                                    <input class="form-check-input" id="inquiryFollowUpFeelingNeutral" onchange="newFollowUp.feeling=this.value;"
                                            name="inquiryFollowUpFeeling" type="radio" value="neutral">
                                     <label class="form-check-label small"
                                            for="inquiryFollowUpFeelingNeutral">Neutral</label>
@@ -426,7 +426,7 @@
                                     <label class="form-check-label" for="inquiryFollowUpConfirmYes">Yes</label>
                                 </div>
                                 <div class="form-check form-check-inline">
-                                    <input checked class="form-check-input" id="inquiryFollowUpConfirmNo" onchange="newFollowUp.confirmed=this.value;"
+                                    <input class="form-check-input" id="inquiryFollowUpConfirmNo" onchange="newFollowUp.confirmed=this.value;"
                                            name="inquiryFollowUpConfirm" type="radio" value="No">
                                     <label class="form-check-label" for="inquiryFollowUpConfirmNo">No</label>
                                 </div>
