--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -499,55 +499,42 @@
                                         value="Kasun">
                 </td>
                 <td class="fw-bold w-25">Last Name</td>
-                <td><input class="small rounded-0 form-control-sm inquirySheetInputs" id="inquirySheetLastName"
-                           onkeyup="inputTextValidator(this,'^[A-Z][a-z]{2,29}$','editedInquiry','lastName')"
-                           disabled
-                           value="Malhara"></td>
+                <td>
+                    <input class="small rounded-0 form-control-sm inquirySheetInputs" id="inquirySheetLastName" onkeyup="inputTextValidator(this,'^[A-Z][a-z]{2,29}$','editedInquiry','lastName')" disabled value="Malhara">
+                </td>
             </tr>
             <tr>
                 <td class="fw-bold w-25">Phone Number</td>
-                <td class="w-25"><input class="small rounded-0 form-control-sm inquirySheetInputs" id="inquirySheetPrimaryMobile"
-                                        onkeyup="inputTextValidator(this,'^[0][7][01245678][0-9]{7}$','editedInquiry','primaryMobileNumber')"
-                                        disabled
-                                        value="0781011144">
+                <td class="w-25">
+                    <input class="small rounded-0 form-control-sm inquirySheetInputs" id="inquirySheetPrimaryMobile" onkeyup="inputTextValidator(this,'^[0][7][01245678][0-9]{7}$','editedInquiry','primaryMobileNumber')" disabled value="0781011144">
                 </td>
                 <td class="fw-bold w-25">Email</td>
-                <td><input class="small rounded-0 form-control-sm inquirySheetInputs" id="inquirySheetEmail"
-                           onkeyup="inputTextValidator(this,'^[a-z|A-Z]{2,19}[@][a-z|A-Z]{2,8}[.][a-z|A-Z]{2,3}$','editedInquiry','email')"
-                           placeholder="Optional" disabled
-                           value="eamalindu@gmail.com">
+                <td>
+                    <input class="small rounded-0 form-control-sm inquirySheetInputs" id="inquirySheetEmail" onkeyup="inputTextValidator(this,'^[a-z|A-Z]{2,19}[@][a-z|A-Z]{2,8}[.][a-z|A-Z]{2,3}$','editedInquiry','email')" placeholder="Optional" disabled value="eamalindu@gmail.com">
                 </td>
             </tr>
             <tr>
                 <td class="fw-bold w-25">Optional Number</td>
-                <td class="w-25"><input class="small rounded-0 form-control-sm inquirySheetInputs"
-                                        id="inquirySheetSecondaryMobile"
-                                        onkeyup="inputTextValidator(this,'^[0][7][01245678][0-9]{7}$','editedInquiry','secondaryMobileNumber')"
-                                        placeholder="Optional" disabled
-                                        value="0781011144">
+                <td class="w-25">
+                    <input class="small rounded-0 form-control-sm inquirySheetInputs" id="inquirySheetSecondaryMobile" onkeyup="inputTextValidator(this,'^[0][7][01245678][0-9]{7}$','editedInquiry','secondaryMobileNumber')" placeholder="Optional" disabled value="0781011144">
                 </td>
                 <td class="fw-bold w-25">
-                    <select class="form-select rounded-0 small form-select-sm fw-bold inquirySheetInputs" disabled
-                            id="inquirySheetIdType"
-                            onchange="selectStaticValueValidator(this,'','editedInquiry','idType')" required>
+                    <select class="form-select rounded-0 small form-select-sm fw-bold inquirySheetInputs" disabled id="inquirySheetIdType" onchange="selectStaticValueValidator(this,'','editedInquiry','idType')" required>
                         <option value="NIC">NIC</option>
                         <option value="POSTAL">POSTAL</option>
                     </select>
                 </td>
-                <td><input class="small rounded-0 form-control-sm inquirySheetInputs" id="inquirySheetIdValue"
-                           onkeyup="inputTextValidator(this,'^(?:[6-9][0-9]{8}([V]|[X]|[v]|[x]){1})|(?:[19|20][0-9]{10})$','editedInquiry','idValue')"
-                           disabled
-                           value="983151108V">
+                <td>
+                    <input class="small rounded-0 form-control-sm inquirySheetInputs" id="inquirySheetIdValue" onkeyup="inputTextValidator(this,'^(?:[6-9][0-9]{8}([V]|[X]|[v]|[x]){1})|(?:[19|20][0-9]{10})$','editedInquiry','idValue')" disabled value="983151108V">
                 </td>
             </tr>
             <tr>
                 <td class="fw-bold w-25">Convenient Time To Contact</td>
-                <td class="w-25"><input class="small rounded-0 form-control-sm border-0" id="inquirySheetNextFollowUp"
-                                        disabled value="2023-10-26 at 00:00"></td>
+                <td class="w-25">
+                    <input class="small rounded-0 form-control-sm border-0 inquirySheetInputs" id="inquirySheetNextFollowUp" disabled value="2023-10-26 at 00:00"></td>
                 <td class="fw-bold w-25">Description</td>
-                <td><textarea class="small rounded-0 form-control-sm inquirySheetInputs" id="inquirySheetDescription"
-                              onkeyup="inputTextValidator(this,'^[a-zA-Z0-9\\s/]{20,}$','editedInquiry','description')"
-                              disabled></textarea>
+                <td>
+                    <textarea class="small rounded-0 form-control-sm inquirySheetInputs" id="inquirySheetDescription" onkeyup="inputTextValidator(this,'^[a-zA-Z0-9\\s/]{20,}$','editedInquiry','description')" disabled></textarea>
                 </td>
             </tr>
             </tbody>
@@ -555,8 +542,7 @@
         <!-- Show Added-by and added time of the inquiry here -->
         <div class="card rounded-0 mb-2">
             <div class="card-body rounded-0 pb-0">
-                <p class="small text-muted text-center">This Inquiry was Created by <span class="fw-bold"
-                                                                                          id="inquirySheetAddedBy"></span>
+                <p class="small text-muted text-center">This Inquiry was Created by <span class="fw-bold" id="inquirySheetAddedBy"></span>
                     on <span class="fw-bold" id="inquirySheetAddedDate"></span> at
                     <span class="fw-bold" id="inquirySheetAddedTime"></span>.</p>
             </div>
