--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -462,9 +462,7 @@
             <tr>
                 <td class="fw-bold w-25">Course</td>
                 <td class="w-25">
-                    <select class="form-select rounded-0 small form-select-sm inquirySheetInputs" disabled
-                            id="inquirySheetCourse"
-                            onchange="selectDynamicValueValidator(this,'','editedInquiry','courseId')" required>
+                    <select class="form-select rounded-0 small form-select-sm inquirySheetInputs" disabled id="inquirySheetCourse" onchange="selectDynamicValueValidator(this,'','editedInquiry','courseId')" required>
                         <option value=""></option>
                         <option>Diploma in IT</option>
                         <option>Diploma in Tamil</option>
@@ -474,9 +472,7 @@
                 </td>
                 <td class="fw-bold w-25">Source</td>
                 <td>
-                    <select class="form-select rounded-0 small form-select-sm inquirySheetInputs" disabled
-                            id="inquirySheetSource"
-                            onchange="selectDynamicValueValidator(this,'','editedInquiry','sourceId')" required>
+                    <select class="form-select rounded-0 small form-select-sm inquirySheetInputs" disabled id="inquirySheetSource" onchange="selectDynamicValueValidator(this,'','editedInquiry','sourceId')" required>
                         <option value=""></option>
                         <option value="Cold Calling">Cold Calling</option>
                         <option value="Facebook">Facebook</option>
@@ -493,10 +489,8 @@
             </tr>
             <tr>
                 <td class="fw-bold w-25">First Name</td>
-                <td class="w-25"><input class="small rounded-0 form-control-sm inquirySheetInputs" id="inquirySheetFirstName"
-                                        onkeyup="inputTextValidator(this,'^[A-Z][a-z]{2,19}$','editedInquiry','firstName')"
-                                        disabled
-                                        value="Kasun">
+                <td class="w-25">
+                    <input class="small rounded-0 form-control-sm inquirySheetInputs" id="inquirySheetFirstName" onkeyup="inputTextValidator(this,'^[A-Z][a-z]{2,19}$','editedInquiry','firstName')" disabled value="Kasun">
                 </td>
                 <td class="fw-bold w-25">Last Name</td>
                 <td>
@@ -531,7 +525,8 @@
             <tr>
                 <td class="fw-bold w-25">Convenient Time To Contact</td>
                 <td class="w-25">
-                    <input class="small rounded-0 form-control-sm border-0 inquirySheetInputs" id="inquirySheetNextFollowUp" disabled value="2023-10-26 at 00:00"></td>
+                    <input class="small rounded-0 form-control-sm border-0 inquirySheetInputs" id="inquirySheetNextFollowUp" onkeyup="inputDateTimeValidator(this,'^20[0-9]{2}[-][0-9]{2}[-][0-9]{2}[ ][0-9]{2}[:][0-9]{2}$','editedInquiry','contactTime')" disabled value="2023-10-26 at 00:00">
+                </td>
                 <td class="fw-bold w-25">Description</td>
                 <td>
                     <textarea class="small rounded-0 form-control-sm inquirySheetInputs" id="inquirySheetDescription" onkeyup="inputTextValidator(this,'^[a-zA-Z0-9\\s/]{20,}$','editedInquiry','description')" disabled></textarea>
