--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -525,7 +525,7 @@
             <tr>
                 <td class="fw-bold w-25">Convenient Time To Contact</td>
                 <td class="w-25">
-                    <input class="small rounded-0 form-control-sm border-0 inquirySheetInputs" id="inquirySheetNextFollowUp" onkeyup="inputDateTimeValidator(this,'^20[0-9]{2}[-][0-9]{2}[-][0-9]{2}[ ][0-9]{2}[:][0-9]{2}$','editedInquiry','contactTime')" disabled value="2023-10-26 at 00:00">
+                    <input class="small rounded-0 form-control-sm border-0 inquirySheetInputs" id="inquirySheetNextFollowUp" onclick="inputDateTimeValidator(this,'^20[0-9]{2}[-][0-9]{2}[-][0-9]{2}[ ][0-9]{2}[:][0-9]{2}$','editedInquiry','contactTime')" disabled value="2023-10-26 at 00:00">
                 </td>
                 <td class="fw-bold w-25">Description</td>
                 <td>
