--- a/system/src/main/resources/templates/crm/Inquiries.html
+++ b/system/src/main/resources/templates/crm/Inquiries.html
@@ -433,19 +433,19 @@
                                 </div>
                                 <div class="form-check form-check-inline">
                                     <input class="form-check-input" id="inquiryFollowUpFeelingPositive" onchange="newFollowUp.feeling=this.value;"
-                                           name="inquiryFollowUpFeeling" type="radio" value="positive">
+                                           name="inquiryFollowUpFeeling" type="radio" value="Positive">
                                     <label class="form-check-label small"
                                            for="inquiryFollowUpFeelingPositive">Positive</label>
                                 </div>
                                 <div class="form-check form-check-inline">
                                     <input class="form-check-input" id="inquiryFollowUpFeelingNeutral" onchange="newFollowUp.feeling=this.value;"
-                                           name="inquiryFollowUpFeeling" type="radio" value="neutral">
+                                           name="inquiryFollowUpFeeling" type="radio" value="Neutral">
                                     <label class="form-check-label small"
                                            for="inquiryFollowUpFeelingNeutral">Neutral</label>
                                 </div>
                                 <div class="form-check form-check-inline">
                                     <input class="form-check-input" id="inquiryFollowUpFeelingNegative" onchange="newFollowUp.feeling=this.value;"
-                                           name="inquiryFollowUpFeeling" type="radio" value="negative">
+                                           name="inquiryFollowUpFeeling" type="radio" value="Negative">
                                     <label class="form-check-label small"
                                            for="inquiryFollowUpFeelingNegative">Negative</label>
                                 </div>
