Reports-All link added

--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -67,7 +67,7 @@
                             data-bs-toggle="dropdown">Reports
                     </button>
                     <ul class="dropdown-menu dropdown-menu-end rounded-0">
-                        <li><a class="dropdown-item" href="#">All</a></li>
+                        <li><a class="dropdown-item" href="Reports-All">All</a></li>
                         <li><a class="dropdown-item" href="#">Registered</a></li>
                         <li><a class="dropdown-item" href="#">Dropped</a></li>
                         <li><a class="dropdown-item" href="#">Not Followed-Up</a></li>
