--- a/system/src/main/resources/templates/crm/Reports-All.html
+++ b/system/src/main/resources/templates/crm/Reports-All.html
@@ -43,12 +43,12 @@
             </ul>
             <!-- Navbar Right side -->
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item"><a class="nav-link text-white custom-width-max-content" href="Inquiry">Inquiries</a></li>
-                <li class="nav-item"><a class="nav-link text-white custom-width-max-content" href="Schedules.html">Schedules</a></li>
+                <li class="nav-item"><a class="nav-link text-white custom-width-max-content" href="Inquiries">Inquiries</a></li>
+                <li class="nav-item"><a class="nav-link text-white custom-width-max-content" href="Schedules">Schedules</a></li>
                 <li class="nav-item dropdown-center custom-width-max-content p-0">
                     <button aria-expanded="false" class="nav-link btn bg-steam-green text-white dropdown-toggle custom-width-max-content border-0 custom-active" data-bs-toggle="dropdown">Reports</button>
                     <ul class="dropdown-menu dropdown-menu-end rounded-0">
-                        <li><a class="dropdown-item" href="#">All</a></li>
+                        <li><a class="dropdown-item custom-active text-white" href="Reports-All">All</a></li>
                         <li><a class="dropdown-item" href="#">Registered</a></li>
                         <li><a class="dropdown-item" href="#">Dropped</a></li>
                         <li><a class="dropdown-item" href="#">Not Followed-Up</a></li>
@@ -78,15 +78,20 @@
     <div class="card rounded-0 ">
         <div class="card-body">
             <div class="row">
-                <div class="col-lg-8 col-12 d-flex justify-content-center align-items-center">
-                </div>
                 <div class="col-lg-4 col-12">
-                    <p class="text-uppercase small m-0 text-muted text-end">Date Range</p>
-                    <button class="btn bg-purple text-white float-end ms-2 rounded-0"><i class="fa-solid fa-magnifying-glass small"></i></button>
-                    <div class="float-end bg-custom-white" id="reportrange" style="cursor: pointer; padding: 6px 10px; border: 1px solid #ccc;">
+                    <p class="text-uppercase small m-0 text-muted text-start">Date Range</p>
+                    <div class="float-start bg-custom-white" id="reportrange" style="cursor: pointer; padding: 6px 10px; border: 1px solid #ccc;width: 380px">
                         <i class="fa fa-calendar"></i>&nbsp;
                         <span></span> <i class="fa fa-caret-down"></i>
                     </div>
+                    <button class="btn bg-purple text-white float-start ms-2 rounded-0"><i class="fa-solid fa-magnifying-glass small"></i></button>
+                </div>
+                <div class="col-lg-5"></div>
+                <div class="col-lg-3 col-12 text-end">
+                    <p class="text-uppercase small m-0 text-muted ms-1">Export To</p>
+                    <button class="btn bg-success text-white rounded-0"><i class="fa-solid fa-file-excel"></i> Excel</button>
+                    <button class="btn bg-warning text-white rounded-0"><i class="fa-solid fa-file-csv"></i> CSV</button>
+                    <button class="btn bg-danger text-white rounded-0"><i class="fa-solid fa-file-lines"></i> Text</button>
                 </div>
             </div>
         </div>
@@ -113,117 +118,8 @@
     </div>
 </div>
 
-<!-- OffCanvas for New Inquiry Start -->
-<div aria-labelledby="offcanvasRightLabel" class="offcanvas offcanvas-end" data-bs-backdrop="static" id="offCanvasInquiry" tabindex="-1">
-    <div class="offcanvas-header bg-light">
-        <button aria-label="Close" class="btn btn-sm btn-danger btn-close-red rounded-0" data-bs-dismiss="offcanvas" type="button"><i class="fas fa-times"></i></button>
-        <h3 class="float-end" style="text-transform: uppercase;font-size: medium;font-weight: bold;font-family: Arial, serif;">New Inquiry</h3>
-    </div>
-    <div class="offcanvas-body">
-        <div class="card border-0">
-            <div class="card-body border-0">
-                <form onsubmit="return false">
-                    <div class="mb-2">
-                        <div class="form-label">
-                            <label class="fw-bold required small" for="inquirySource">Source</label>
-                        </div>
-                        <div class="input-group">
-                            <select class="form-select rounded-0 chosen-inquiry" data-placeholder="Please Select a Source" id="inquirySource" required>
-                                <option value=""></option>
-                                <option value="Cold Calling">Cold Calling</option>
-                                <option value="Facebook">Facebook</option>
-                                <option value="Leaflets">Leaflets</option>
-                                <option value="Letter Campaign">Letter Campaign</option>
-                                <option value="Personal Contact">Personal Contact</option>
-                                <option value="Phone">Phone Call</option>
-                                <option value="Seminar">Seminar</option>
-                                <option value="SMS Campaign">SMS Campaign</option>
-                                <option value="Walk-In">Walk-In</option>
-                                <option value="WhatsApp">WhatsApp</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="mb-3">
-                        <div class="form-label">
-                            <label class="fw-bold required small" for="inquiryCourse">Course</label>
-                        </div>
-                        <div class="input-group">
-                            <select class="form-select rounded-0 chosen-inquiry" data-placeholder="Please Select a Course" id="inquiryCourse" required>
-                                <option value=""></option>
-                                <option>Diploma in IT</option>
-                                <option>Diploma in English</option>
-                                <option>Certificate in IT</option>
-                                <option>Certificate in English</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="mb-2">
-                        <div class="form-label small">
-                            <label class="fw-bold required" for="inquiryFirstName">First Name</label>
-                        </div>
-                        <input class="form-control rounded-0" id="inquiryFirstName" onkeyup="inputTextValidator(this,'^[A-Z][a-z]{2,19}$')" required type="text">
-                    </div>
-                    <div class="mb-2">
-                        <div class="form-label small">
-                            <label class="fw-bold required" for="inquiryLastName">Last Name</label>
-                        </div>
-                        <input class="form-control rounded-0" id="inquiryLastName" onkeyup="inputTextValidator(this,'^[A-Z][a-z]{2,29}$')" required type="text">
-                    </div>
-                    <div class="mb-2">
-                        <div class="form-label small">
-                            <label class="fw-bold required" for="inquiryMobileNumber">Mobile Number</label>
-                        </div>
-                        <input class="form-control rounded-0" id="inquiryMobileNumber" onkeyup="inputTextValidator(this,'^[0][7][01245678][0-9]{7}$')" required type="text">
-                    </div>
-                    <div class="mb-2">
-                        <div class="form-label small">
-                            <label class="fw-bold" for="inquiryAdditionalMobileNumber">Additional Mobile Number</label>
-                        </div>
-                        <input class="form-control rounded-0" id="inquiryAdditionalMobileNumber" onkeyup="inputTextValidator(this,'^[0][7][01245678][0-9]{7}$')" placeholder="Optional" type="text">
-                    </div>
-                    <div class="mb-2">
-                        <div class="form-label small">
-                            <label class="fw-bold" for="inquiryEmail">Email</label>
-                        </div>
-                        <input class="form-control rounded-0" id="inquiryEmail" onkeyup="inputTextValidator(this,'^[a-z|A-Z]{2,19}[@][a-z|A-Z]{2,8}[.][a-z|A-Z]{2,3}$')" placeholder="Optional"
-                               type="text">
-                    </div>
-                    <div class="mb-2">
-                        <div class="form-label">
-                            <label class="fw-semibold required small" for="inquiryIdOption">NIC / Postal ID</label>
-                        </div>
-                        <div class="input-group">
-                            <select class="form-select bg-light rounded-0 custom-width-max-content" id="inquiryIdOption">
-                                <option value="1">NIC</option>
-                                <option value="2">Postal</option>
-                            </select>
-                            <input class="form-control rounded-0" id="inquiryID" onkeyup="inputTextValidator(this,'^(?:[6-9][0-9]{8}([V]|[X]|[v]|[x]){1})|(?:[19|20][0-9]{10})$')" required>
-                        </div>
-                    </div>
-                    <div class="mb-2">
-                        <div class="form-label">
-                            <label class="fw-bold required small" for="inquiryTime">Convenient Time To Contact</label>
-                        </div>
-                        <input class="form-control rounded-0" id="inquiryTime" onchange="inputTextValidator(this,'^20[0-9]{2}[-][0-9]{2}[-][0-9]{2}[ ][a][t][ ][0-9]{2}[:][0-9]{2}$')" required>
-                    </div>
-                    <div class="mb-3">
-                        <div class="form-label">
-                            <label class="fw-bold required small" for="inquiryDescription">Description</label>
-                        </div>
-                        <textarea class="rounded-0 form-control" cols="80" id="inquiryDescription" required rows="4"></textarea>
-                        <div class="text-muted small"><small> a short description which will be useful for the counsellor who will be handling this inquiry</small></div>
-                    </div>
-                    <div class="mb-2">
-                        <button class="btn bg-purple text-white rounded-0 btn-block w-100" id="inquiryConfirm" type="submit">Confirm</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- OffCanvas for New Inquiry End -->
 
-<script src="resources/js/external-validator.js" type="text/javascript"></script>
-<script src="reports.js"></script>
+<script src="/resources/js/external-validator.js" type="text/javascript"></script>
+<script src=""></script>
 </body>
 </html>
