--- a/system/src/main/resources/templates/crm/Schedules.html
+++ b/system/src/main/resources/templates/crm/Schedules.html
@@ -48,7 +48,7 @@
                 <li class="nav-item dropdown-center custom-width-max-content p-0">
                     <button aria-expanded="false" class="nav-link btn bg-steam-green text-white dropdown-toggle custom-width-max-content border-0" data-bs-toggle="dropdown">Reports</button>
                     <ul class="dropdown-menu dropdown-menu-end rounded-0">
-                        <li><a class="dropdown-item" href="#">All</a></li>
+                        <li><a class="dropdown-item" href="Reports-All">All</a></li>
                         <li><a class="dropdown-item" href="#">Registered</a></li>
                         <li><a class="dropdown-item" href="#">Dropped</a></li>
                         <li><a class="dropdown-item" href="#">Not Followed-Up</a></li>
