--- a/system/src/main/resources/templates/crm/Reports-All.html
+++ b/system/src/main/resources/templates/crm/Reports-All.html
@@ -120,6 +120,6 @@
 
 
 <script src="/resources/js/external-validator.js" type="text/javascript"></script>
-<script src=""></script>
+<script src="/resources/js/CRM/reportsAll.js" type="text/javascript"></script>
 </body>
 </html>
