--- a/system/src/main/resources/templates/crm/Reports-All.html
+++ b/system/src/main/resources/templates/crm/Reports-All.html
@@ -96,7 +96,7 @@
             </div>
         </div>
         <div class="card-footer pt-4 pb-4 overflow-auto">
-            <table class="custom-table">
+            <table class="custom-table" id="tblReportsAll">
                 <thead>
                 <tr>
                     <th>#</th>
