--- a/system/src/main/resources/templates/crm/Schedules.html
+++ b/system/src/main/resources/templates/crm/Schedules.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" name="viewport">
-    <title>Inquiries | STEAM CRM</title>
+    <title>Schedules | STEAM CRM</title>
     <!-- Favicon Icon -->
     <link href="/resources/images/icon-sq.png" rel="icon" type="image/png">
     <!-- Bootstrap CSS File-->
