sheetJS script added

--- a/system/src/main/resources/templates/crm/Reports-All.html
+++ b/system/src/main/resources/templates/crm/Reports-All.html
@@ -21,6 +21,8 @@
     <!-- Chosen Library-->
     <script src="/resources/chosen-1.8.7/chosen.jquery.min.js" type="text/javascript"></script>
     <link href="/resources/chosen-1.8.7/chosen.min.css" rel="stylesheet" type="text/css">
+    <!-- Sheet JS File-->
+    <script src="/resources/sheetJS-0.20.0/xlsx.full.min.js" type="text/javascript"></script>
     <!-- Custom CSS File-->
     <link href="/resources/css/customCRM.css" rel="stylesheet">
 </head>
@@ -89,7 +91,7 @@
                 <div class="col-lg-5"></div>
                 <div class="col-lg-3 col-12 text-end">
                     <p class="text-uppercase small m-0 text-muted ms-1">Export To</p>
-                    <button class="btn bg-success text-white rounded-0"><i class="fa-solid fa-file-excel"></i> Excel</button>
+                    <button class="btn bg-success text-white rounded-0" id="btnToExcel"><i class="fa-solid fa-file-excel"></i> Excel</button>
                     <button class="btn bg-warning text-white rounded-0"><i class="fa-solid fa-file-csv"></i> CSV</button>
                     <button class="btn bg-danger text-white rounded-0"><i class="fa-solid fa-file-lines"></i> Text</button>
                 </div>
@@ -512,6 +514,7 @@
 <script src="/resources/js/external-commonFunction.js" type="text/javascript"></script>
 <script src="/resources/js/external-table.js" type="text/javascript"></script>
 <script src="/resources/js/external-modalFunction.js" type="text/javascript"></script>
+<script src="/resources/js/external-exportData.js" type="text/javascript"></script>
 <script src="/resources/js/CRM/newInquiry.js" type="text/javascript"></script>
 <script src="/resources/js/CRM/newFollowUp.js" type="text/javascript"></script>
 <script src="/resources/js/CRM/reportsAll.js" type="text/javascript"></script>
