--- a/system/src/main/resources/templates/crm/Reports-All.html
+++ b/system/src/main/resources/templates/crm/Reports-All.html
@@ -93,7 +93,7 @@
                     <p class="text-uppercase small m-0 text-muted ms-1">Export To</p>
                     <button class="btn bg-success text-white rounded-0" id="btnToExcel"><i class="fa-solid fa-file-excel"></i> Excel</button>
                     <button class="btn bg-warning text-white rounded-0"><i class="fa-solid fa-file-csv"></i> CSV</button>
-                    <button class="btn bg-danger text-white rounded-0"><i class="fa-solid fa-file-lines"></i> Text</button>
+                    <button class="btn bg-danger text-white rounded-0"><i class="fa-solid fa-file-pdf"></i> PDF</button>
                 </div>
             </div>
         </div>
