--- a/system/src/main/resources/static/resources/css/customCRM.css
+++ b/system/src/main/resources/static/resources/css/customCRM.css
@@ -206,6 +206,9 @@ select:invalid[multiple] {
     color: black;
 
 }
+.newInquiryInputs{
+    font-size: 13px;
+}
 /*overriding default*/
 .form-select:disabled {
     background-color: white;
