--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -394,6 +394,7 @@
                                         <option>Email</option>
                                         <option>Text</option>
                                     </select>
+                                    <div class="valid-feedback">Value Accepted</div>
                                 </div>
                                 <div class="text-muted small"><small>How did you follow up the inquiry?</small></div>
                             </div>
@@ -401,10 +402,12 @@
                                 <div class="form-label">
                                     <label class="fw-bold required small" for="inquiryFollowUpContent">Content</label>
                                 </div>
-                                <textarea class="rounded-0 form-control" cols="80" id="inquiryFollowUpContent"
+                                <textarea class="rounded-0 form-control" cols="80" id="inquiryFollowUpContent" style="font-size: 13px"
                                           onkeyup="inputTextValidator(this,'^[a-zA-Z0-9\\s/]{3,}$','newFollowUp','content')"
                                           required
                                           rows="4"></textarea>
+                                <div class="valid-feedback">Value Accepted</div>
+                                <div class="invalid-feedback">Please provide a valid Feedback</div>
                                 <div class="text-muted small"><small>Summary of the Customer Feedback.</small></div>
                             </div>
                         </div>
@@ -442,12 +445,12 @@
                                 <div class="form-check form-check-inline">
                                     <input class="form-check-input" id="inquiryFollowUpConfirmYes" onchange="newFollowUp.confirmed=this.value;"
                                            name="inquiryFollowUpConfirm" type="radio" value="Yes">
-                                    <label class="form-check-label" for="inquiryFollowUpConfirmYes">Yes</label>
+                                    <label class="form-check-label small" for="inquiryFollowUpConfirmYes">Yes</label>
                                 </div>
                                 <div class="form-check form-check-inline">
                                     <input class="form-check-input" id="inquiryFollowUpConfirmNo" onchange="newFollowUp.confirmed=this.value;"
                                            name="inquiryFollowUpConfirm" type="radio" value="No">
-                                    <label class="form-check-label" for="inquiryFollowUpConfirmNo">No</label>
+                                    <label class="form-check-label small" for="inquiryFollowUpConfirmNo">No</label>
                                 </div>
                             </div>
                             <div class="mb-2">
@@ -455,9 +458,10 @@
                                     <label class="fw-bold required small" for="inquiryFollowUpTime">Convenient Time To
                                         Contact</label>
                                 </div>
-                                <input class="form-control rounded-0" id="inquiryFollowUpTime"
+                                <input class="form-control rounded-0" id="inquiryFollowUpTime" style="font-size: 13px"
                                        onchange="inputDateTimeValidator(this,'^20[0-9]{2}[-][0-9]{2}[-][0-9]{2}[ ][0-9]{2}[:][0-9]{2}$','newFollowUp','nextFollowup')"
                                        required>
+                                <div class="valid-feedback">Value Accepted</div>
                                 <div class="text-muted small"><small>When do you want to contact this customer
                                     again?</small></div>
                             </div>
